Refactoring of TelnetServer